Fix Epilogue button alignment

--- a/src/index.css
+++ b/src/index.css
@@ -132,10 +132,13 @@
     background-color: hsl(210 33% 97.6%);
   }
 
-  /* Fix Epilogue vertical centering in buttons/pills */
-  button,
-  [role="button"],
-  a[class*="inline-flex"] {
-    padding-top: 0.0625em;
-  }
+}
+
+/* Fix Epilogue baseline shift in buttons/pills */
+button,
+[role="button"],
+a.inline-flex,
+[class*="inline-flex"] {
+  line-height: 1;
+  padding-block: 0.1em;
 }
